# MAIC_Carles

./: .env.example  .gitignore  README.md  pyproject.toml
M8T1/PoC/: README.md  index.html
M8T1/PoT/: .gitignore  README.md  SETUP.md
M8T1/PoT/data/: eval_questions.json
M8T1/PoT/data/processed_data/actas/Acta_01_S01/: document.json
M8T1/PoT/data/processed_data/actas/Acta_02_S03/: document.json
M8T1/PoT/data/processed_data/actas/Acta_03_S05/: document.json
M8T1/PoT/data/processed_data/actas/Acta_04_S07/: document.json
M8T1/PoT/data/processed_data/actas/Acta_05_S09/: document.json
M8T1/PoT/data/processed_data/actas/Acta_06_S11/: document.json
M8T1/PoT/data/processed_data/actas/Acta_07_S13/: document.json
M8T1/PoT/data/processed_data/actas/Acta_08_S15/: document.json
M8T1/PoT/data/processed_data/actas/Acta_09_S17/: document.json
M8T1/PoT/data/processed_data/actas/Acta_10_S19/: document.json
M8T1/PoT/data/processed_data/contratos/20 - Contrato Obra - Firmado/: document.json
M8T1/PoT/data/processed_data/normativa/capitulo_1._principios_generales/: document.json
M8T1/PoT/data/processed_data/normativa/capitulo_17._criterios_generales_para_las_estructuras_de_acero/: document.json
M8T1/PoT/data/processed_data/normativa/capitulo_19._durabilidad_de_las_estructuras_de_acero/: document.json
M8T1/PoT/notebooks/: 01_parseo_ingesta.ipynb  02_recuperacion.ipynb  03_generacion.ipynb  04_evaluacion.ipynb
M8T1/PoT/src/: __init__.py  config.py  evaluate.py  generate_eval_dataset.py  ingest.py  retriever.py
M8T1/PoT/src/graphs/: __init__.py  acta.py  rag.py
(+14 files in other folders)
